--- a/templates/ligas.html
+++ b/templates/ligas.html
@@ -3,25 +3,58 @@
 
         <main>
           <p>
-            <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Crear una liga privada</a>
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Ingresar a una liga</button>
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle both elements</button>
+            <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Crear liga privada</a>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Unirse a liga privada</button>
+            
           </p>
           <div class="row">
             <div class="col">
               <div class="collapse multi-collapse" id="multiCollapseExample1">
                 <div class="card card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                  <form action="/crea_liga_priv" class="formulario_admin" method="POST">
+                    <input type="text" class="form-control" name="nombre_nueva_liga" placeholder="Nombre de liga">
+                    <button type="submit" class="btn btn-secondary">Crear</button>
+                    
+                    <aside>{%with messages = get_flashed_messages(with_categories=true)%}
+                      {%if messages %}
+                          
+                              {%for category, message in messages%}
+                                  <div class="alert {{category}}" id="idMensajeError">
+                                          <strong>Info!</strong> {{message}} 
+                                  </div>
+                              {%endfor%}
+                          {%endif%}
+                      {%endwith%}
+                    </aside>
+                  </form>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="collapse multi-collapse" id="multiCollapseExample2">
                 <div class="card card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                  <div class="card card-body">
+                    <form action="/ingresa_liga" class="formulario_admin" method="POST">
+                      <input type="text" class="form-control" name="nombre_liga" placeholder="Código de liga">
+                      <button type="submit" class="btn btn-secondary">Unirse</button>
+                      
+                      <aside>{%with messages = get_flashed_messages(with_categories=true)%}
+                        {%if messages %}
+                            
+                                {%for category, message in messages%}
+                                    <div class="alert {{category}}" id="idMensajeError">
+                                            <strong>Info!</strong> {{message}} 
+                                    </div>
+                                {%endfor%}
+                            {%endif%}
+                        {%endwith%}
+                      </aside>
+                    </form>
+                  </div>
                 </div>
               </div>
             </div>
+          </div>
           </div>
           <table class="table table-hover tabla_liga">
             <thead>
