--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Liga Profesional</a>
+              <a class="nav-link disabled" href="#">Liga Profesional</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="live">Partidos en vivo</a>
@@ -51,8 +51,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="/salir">Salir</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="/cuenta">Ver Cuenta</a></li>
               </ul>
             </li>
           </ul>
