--- a/templates/creaequipo.html
+++ b/templates/creaequipo.html
@@ -10,7 +10,7 @@
               </div>
               <input type="text" class="form-control" id="nombre_equipo" aria-label="Default" aria-describedby="inputGroup-sizing-default" placeholder=".......FC">
               <div class="input-group-prepend" id="columnapresupuesto">
-                <span class="input-group-text" >Presupuesto: &nbsp; <b id="campopresupuesto">90</b> MBs</span>
+                <span class="input-group-text" >Presupuesto: &nbsp; <b id="campopresupuesto">80</b> Millones de Bs</span>
                 </div>
               </div>
               
@@ -245,7 +245,6 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Datos del jugador</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
               
@@ -254,6 +253,25 @@
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                 <button type="button" class="btn btn-primary botonadd">Agregar a tu equipo</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Modal Datos Jugador para eliminar-->
+        <div class="modal fade" id="rempModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Datos del jugador</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+              
+              </div>
+              
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary botonquitar">Quitar de tu equipo</button>
               </div>
             </div>
           </div>
