--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -12,7 +12,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                <p>Prepara tu equipo para la fecha {{ronda}} del torneo apertura 2022</p>
+                <p>Prepara tu equipo para la fecha {{ronda[1]}} del torneo {{ronda[0]}}</p>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">cerrar</button>
