--- a/templates/response.html
+++ b/templates/response.html
@@ -14,7 +14,7 @@
         
     </tr>
 </table>
-<center><b><font COLOR="green">PRECIO:&nbsp; {{totales[8]}} MBs</font></b> </center>
+<center><b><font COLOR="green">PRECIO:&nbsp; {{totales[8]}} Millones de Bs</font></b> </center>
 <div id="tala_totales">
 
 
@@ -44,7 +44,17 @@
             <th scope="col">{{totales[7]}}</th>
            </tr>
            <tr>
-            <th>Temp 2021</th>  
+            <th>Apertura 2022</th>  
+            <td scope="col">{{apertura21[1]}}</td>
+            <td scope="col">{{apertura21[2]}}</td>
+            <th scope="col">{{apertura21[3]}}</th>
+            <th scope="col">{{apertura21[4]}}</th>
+            <th scope="col">{{apertura21[5]}}</th>
+            <th scope="col">{{apertura21[6]}}</th>
+            <th scope="col">{{apertura21[7]}}</th>
+           </tr>
+           <tr>
+            <th>Clausura 2021</th>  
             <td scope="col">{{total[1]}}</td>
             <td scope="col">{{total[2]}}</td>
             <th scope="col">{{total[3]}}</th>
