--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -209,6 +209,9 @@ main{
 .casilla {
     margin: auto;
     align-items: center;
+    padding-top: -20px;
+    
+    
     
     
 }
@@ -279,6 +282,10 @@ main{
     overflow: auto;
     height: 320px;
 }
+#tala_totales table tbody tr th{
+    text-align:center;
+    align-content: center;
+}
 
 .boton-selec, .boton-info {
     border: none;
@@ -327,6 +334,10 @@ main{
     
     
 }
+#img_capi {
+    margin-bottom: -15px;
+    width: 40%;
+}
 
 .cuadro_contenedor {
     border-radius: 10px;
@@ -354,10 +365,10 @@ main{
     
 }
 .btn-close {
-    display: none;
+    display:none;
     justify-content: center;
     background-color:orangered;
-    margin-left: 35%;   
+    margin-left: 35%; 
 }
 .btn-change {
     display: none;
@@ -455,7 +466,7 @@ main{
     
 }
 .cuadro_cont_bench {
-    height: 60%;
+    height: 80%;
 }
 .cuadro_int_bench_des {
     font-size:10px;
@@ -485,7 +496,7 @@ main{
       height: 100%;
       object-fit: cover;
       object-position: center center;
-      padding-top: 30px;
+      padding-top: 15px;
     }
 }
 .disabledbutton {
@@ -506,7 +517,7 @@ main{
     color: black;
     max-width: 333px;
     max-height: 540px;
-    min-width: 308px;
+    min-width: 312px;
     min-height: 480px;
     justify-content: center;
     align-items: center;
@@ -640,6 +651,18 @@ flex: 1;
     width: 90%;
     border-color: rgb(10, 170, 103);
 }
+.fila-lateral-1{
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: solid;
+    height: 80%;
+    width: 90%;
+    border-color: rgb(10, 170, 103);
+}
 .tabla_liga{
     max-width: 200px;
     color: #f3f5f7;
@@ -647,6 +670,14 @@ flex: 1;
 }
 .tabla_liga thead tr th{
     color: #f3f5f7;
+}
+#fixture tbody td img{
+    width: 35px;
+    height: auto;
+}
+#fixture{
+    
+    max-width: 220px;
 }
 #cabecera_principal{
     width: 100%;
@@ -667,9 +698,9 @@ html body{
 #overlay {
     position: fixed; /* Sit on top of the page content */
     display: none; /* Hidden by default */
-    width: 45%; /* Full width (cover the whole page) */
-    height: 35%; /* Full height (cover the whole page) */
-    top: 20%;
+    width: 40%; /* Full width (cover the whole page) */
+    height: 30%; /* Full height (cover the whole page) */
+    top: 10%;
     right: 5%;
     bottom: 0;
     background-color: rgba(250, 249, 249, 0.877); /* Black background with opacity */
@@ -679,4 +710,12 @@ html body{
 
 .datos-jugador p{
     color: black;
+}
+.btn_liga{
+    background-color: transparent;
+    border: none;
+    color:#f3f5f7;
+}
+.pos_cancha{
+    color:rgb(216, 215, 215);
 }
