--- a/templates/puntos.html
+++ b/templates/puntos.html
@@ -6,7 +6,7 @@
             
             <div class="columna-principal">
               <div class="row justify-content-md-center fila-menu">
-                <div class="row justify-content-md-center">
+                <div class="row justify-content-md-center info_bot">
                   <div class="col-md-auto">
                     <span class="input-group-text" >Equipo:&nbsp; <b>{{name_team}}&nbsp;&nbsp;</b></span>
                   </div>
@@ -17,7 +17,7 @@
                 <div class="col col-lg-2">
                   
                 </div>
-                <div class="col-md-auto">
+                <div class="col-md-auto botonera">
                   <div class="btn-group btn-group-toggle" data-toggle="buttons">
                     <a href="#" class="btn-prev btn-secondary btn-lg " role="button" data-jor="{{ron}}" aria-disabled="false">ANT</a>
                     <a href="#" class="btn btn-primary btn-lg disabled" role="button" aria-disabled="true">JORNADA {{ron}} </a>
