--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,13 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="{{url_for('static', filename='css/estilos.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/theme.ice.min.css')}}">
+    <link rel="stylesheet" href="https://widgets.sportmonks.com/css/app.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="{{url_for('static', filename='js/jquery-3.6.0.min.js')}}"></script>
     <script src="{{url_for('static', filename='ts/dist/js/jquery.tablesorter.js')}}"></script>
     <script src="{{url_for('static', filename='ts/dist/js/jquery.tablesorter.widgets.js')}}"></script>
+
 </head>
 <body>
   
