--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
   <header id="cabecera_principal">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/inicio">LPFB</a>
+        <a class="navbar-brand" href="/inicio"><img src= /static/images/android-chrome-192x192.png width="60" height="60" class="img-responsive img-rounded" id="home"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -52,8 +52,9 @@
                 Cuenta
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="/salir">Salir</a></li>
                 <li><a class="dropdown-item" href="/cuenta">Ver Cuenta</a></li>
+                <li><a class="dropdown-item" href="/salir">Salir</a></li>
+                
               </ul>
             </li>
           </ul>
