--- a/templates/creaequipo.html
+++ b/templates/creaequipo.html
@@ -6,7 +6,7 @@
           <div class="row mb-5 pagina-general" aria-hidden="true">
             <div class="input-group mb-3"id="filadatos">
               <div class="input-group-prepend">
-                <span class="input-group-text" >Nombre de tu equipo</span>
+                <span class="input-group-text" required="">Nombre de tu equipo</span>
               </div>
               <input type="text" class="form-control" id="nombre_equipo" aria-label="Default" aria-describedby="inputGroup-sizing-default" placeholder=".......FC">
               <div class="input-group-prepend" id="columnapresupuesto">
