--- a/templates/cuenta.html
+++ b/templates/cuenta.html
@@ -2,273 +2,33 @@
 {% block content %}
 
         <main class="container_select">
-          <div class="container plano-wraper">
+          <form>
+            <div class="mb-3">
+              <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                <option selected>Cambiar de equipo favorito</option>
+                {% for team in teams %}
+                  <option value="{{team[0]}}">{{team[1]}}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Cambiar de correo</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <div id="emailHelp" class="form-text">El correo no sera compartido con nadie.</div>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Cambiar de contraseña</label>
+              <input type="password" class="form-control" id="exampleInputPassword1">
+              <span id="passwordHelpInline" class="form-text">
+                Debe contener al menos 8 caracteres.
+              </span>
+            </div>
             
-            <div class="columna-principal">
-              <div class="row justify-content-md-center fila-menu">
-                <div class="row justify-content-md-center">
-                  <div class="col-md-auto">
-                    <span class="input-group-text" >Equipo:&nbsp; <b>{{name_team}}&nbsp;&nbsp;</b></span>
-                  </div>
-                  <div class="col-md-auto">
-                    <span class="input-group-text"> &nbsp; Puntos: &nbsp; <b id="campopresupuesto">{{pts}}</b></span>
-                  </div>
-                </div>
-                <div class="col col-lg-2">
-                  
-                </div>
-                <div class="col-md-auto">
-                  <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                    <a href="#" class="btn-prev btn-secondary btn-lg " role="button" data-jor="{{ron}}" aria-disabled="false">ANT</a>
-                    <a href="#" class="btn btn-primary btn-lg disabled" role="button" aria-disabled="true">JORNADA {{ron}} </a>
-                    <a href="#" class="btn-next btn-secondary btn-lg " role="button" data-jor="{{ron}}" aria-disabled="true">SIG</a>
-                  </div>
-                </div>
-                <div class="col col-lg-2" id="supl_equipo" data-supl="{{supl}}" data-capi="{{capi}}">
-                  
-                </div>
-              </div>
-              <div class="row mb-5 justify-content-md-center fila-cancha" aria-hidden="true">
-                
-                <div class="input-group mb-3"id="filadatos">
-                    <div class="col" id="col2">
-                      <div class="cuadro_cont_bench">
-                        <div class="cuadro_int_bench_des">
-                          <div class="suplente_int" id="suplente_3"></div>
-                          <div class="suplente_int" id="suplente_2"></div>
-                          <div class="suplente_int" id="suplente_1"></div>
-                          <div class="suplente_int" id="suplente_0"></div>
-                        </div>
-                      </div>
-                      <div class="cuadro_int_bench">
-                        <button id="bench">
-                          <img src="{{url_for('static', filename='images/Bench.png')}}" alt="Banca de suplentes" id="banca_sup">
-                        </button>
-                      </div>
-                      
-                    </div>
-                    <!-- Grid, 15 jugadores unselected/select-->
-                    <div class="col-5 page-wrapper"> 
-                      <div class="row_cancha" id="row_rival">
-                        <div class="column cuadro_contenedor" id="cuadro"></div>
-                        <div class="column cuadro_contenedor"></div>
-                        <div class="column cuadro_contenedor"></div>
-                        <div class="column cuadro_contenedor"></div>
-                        <div class="column cuadro_contenedor"></div>
-                        <div class="column cuadro_contenedor"></div>
-                      </div>
-                      <div class="row_cancha" id="row_ATA">
-                        <div class="column cuadro_contenedor " id="cuadro_A3">
-                          <div class="casilla" id="casilla_A3">
-                            <button id="btn_A3" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="A3" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jA3[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_A3' data-pos='{{jA3[4]}}' data-usr='{{jA3[2]}}' data-price='{{jA3[12]}}' data-team='{{jA3[3]}}'><b>{{jA3[1]}}</b><br><b class="pts-jug">{{jA3[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                        <div class="column cuadro_contenedor " id="cuadro_A2">
-                          <div class="casilla" id="casilla_A2">
-                            <button id="btn_A2" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="A2" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jA2[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_A2' data-pos='{{jA2[4]}}' data-usr='{{jA2[2]}}' data-price='{{jA2[12]}}' data-team='{{jA2[3]}}'><b>{{jA2[1]}}</b><br><b class="pts-jug">{{jA2[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                        <div class="column cuadro_contenedor " id="cuadro_A1">
-                          <div class="casilla" id="casilla_A1">
-                            <button id="btn_A1" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="A1" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jA1[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_A1' data-pos='{{jA1[4]}}' data-usr='{{jA1[2]}}' data-price='{{jA1[12]}}' data-team='{{jA1[3]}}'><b>{{jA1[1]}}</b><br><b class="pts-jug">{{jA1[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row_cancha" id="row_MED">
-                        <div class="column cuadro_contenedor" id="cuadro_M5">
-                          <div class="casilla" id="casilla_M5">
-                            <button id="btn_M5" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="M5" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jM5[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_M5' data-pos='{{jM5[4]}}' data-usr='{{jM5[2]}}' data-price='{{jM5[12]}}' data-team='{{jM5[3]}}'><b>{{jM5[1]}}</b><br><b class="pts-jug">{{jM5[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                        <div class="column cuadro_contenedor" id="cuadro_M4">
-                          <div class="casilla" id="casilla_M4">
-                            <button id="btn_M4" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="M4" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jM4[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_M4' data-pos='{{jM4[4]}}' data-usr='{{jM4[2]}}' data-price='{{jM4[12]}}' data-team='{{jM4[3]}}'><b>{{jM4[1]}}</b><br><b class="pts-jug">{{jM4[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                        <div class="column cuadro_contenedor" id="cuadro_M3">
-                          <div class="casilla" id="casilla_M3">
-                            <button id="btn_M3" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="M3" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jM3[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_M3' data-pos='{{jM3[4]}}' data-usr='{{jM3[2]}}' data-price='{{jM3[12]}}' data-team='{{jM3[3]}}'><b>{{jM3[1]}}</b><br><b class="pts-jug">{{jM3[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                        <div class="column cuadro_contenedor" id="cuadro_M2">
-                          <div class="casilla" id="casilla_M2">
-                            <button id="btn_M2" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="M2" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jM2[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_M2' data-pos='{{jM2[4]}}' data-usr='{{jM2[2]}}' data-price='{{jM2[12]}}' data-team='{{jM2[3]}}'><b>{{jM2[1]}}</b><br><b class="pts-jug">{{jM2[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                        <div class="column cuadro_contenedor" id="cuadro_M1">
-                          <div class="casilla" id="casilla_M1">
-                            <button id="btn_M1" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="M1" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jM1[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_M1' data-pos='{{jM1[4]}}' data-usr='{{jM1[2]}}' data-price='{{jM1[12]}}' data-team='{{jM1[3]}}'><b>{{jM1[1]}}</b><br><b class="pts-jug">{{jM1[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row_cancha" id="row_DEF">
-                        <div class="column cuadro_contenedor" id="cuadro_D5"> 
-                          <div class="casilla" id="casilla_D5">
-                            <button id="btn_D5" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="D5" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jD5[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_D5' data-pos='{{jD5[4]}}' data-usr='{{jD5[2]}}' data-price='{{jD5[12]}}' data-team='{{jD5[3]}}'><b>{{jD5[1]}}</b><br><b class="pts-jug">{{jD5[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                        <div class="column cuadro_contenedor" id="cuadro_D4">
-                          <div class="casilla" id="casilla_D4">
-                            <button id="btn_D4" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="D4" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jD4[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_D4' data-pos='{{jD4[4]}}' data-usr='{{jD4[2]}}' data-price='{{jD4[12]}}' data-team='{{jD4[3]}}'><b>{{jD4[1]}}</b><br><b class="pts-jug">{{jD4[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                        <div class="column cuadro_contenedor" id="cuadro_D3">
-                          <div class="casilla" id="casilla_D3">
-                            <button id="btn_D3" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="D3" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jD3[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_D3' data-usr='{{jD3[2]}}' data-pos='{{jD3[4]}}'  data-price='{{jD3[12]}}' data-team='{{jD3[3]}}'><b>{{jD3[1]}}</b><br><b class="pts-jug">{{jD3[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                        <div class="column cuadro_contenedor" id="cuadro_D2">
-                          <div class="casilla" id="casilla_D2">
-                            <button id="btn_D2" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="D2" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jD2[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_D2' data-usr='{{jD2[2]}}' data-price='{{jD2[12]}}' data-team='{{jD2[3]}}' data-pos='{{jD2[4]}}'><b>{{jD2[1]}}</b><br><b class="pts-jug">{{jD2[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                        <div class="column cuadro_contenedor" id="cuadro_D1">
-                          <div class="casilla" id="casilla_D1">
-                            <button id="btn_D1" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PL.png" id="D1" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jD1[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_D1' data-usr='{{jD1[2]}}' data-price='{{jD1[12]}}' data-team='{{jD1[3]}}' data-pos='{{jD1[4]}}'><b>{{jD1[1]}}</b><br><b class="pts-jug">{{jD1[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row_cancha" id="row_POR">
-                        <div class="column cuadro_contenedor" id="cuadro_P1">
-                          <div class="casilla" id="casilla_P1">
-                            <button id="btn_P1" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PO.png" id="P1" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jP1[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_P1' data-usr='{{jP1[2]}}' data-price='{{jP1[12]}}' data-team='{{jP1[3]}}' data-pos='{{jP1[4]}}'><b>{{jP1[1]}}</b><br><b class="pts-jug">{{jP1[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                        <div class="column cuadro_contenedor" id="cuadro_P2">
-                          <div class="casilla_sup" id="casilla_P2">
-                            <button id="btn_P2" class="jugador_ico cuadro_int">
-                              <img src="/static/images/PO.png" id="P2" alt="Micha" class="img-fluid rounded img_reemplazo">
-                              <img src='{{jP2[0]}}' alt='Micha' id='img_cambiada' class='img-fluid rounded img_P2' data-usr='{{jP2[2]}}' data-price='{{jP2[12]}}' data-team='{{jP2[3]}}' data-pos='{{jP2[4]}}'><b>{{jP2[1]}}</b><br><b class="pts-jug">{{jP2[5]}}</b>
-                            </button>
-                          </div>
-                        </div>
-                      </div>
-                      <!-- <div class="casilla"><button id="btn_P1" class="jugador_ico"><img src="static/images/PO.png" id="P1" alt="Micha" class="img-fluid rounded"></button></div>
-                        -->  
-                              
-                    </div>
-                </div>
-                
-                  
-              </div>
-            </div>
-            <div class="columna-lateral">
-              <div class="fila-lateral-1">
-                <table class="table table-dark" id="fixture">
-                <thead>
-                  <tr>
-                    <th scope="col">&nbsp;&nbsp;&nbsp;L</th>
-                    <th scope="col"></th>
-                    <th scope="col">&nbsp;&nbsp;&nbsp;V</th>
-                    <th scope="col"></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for pjugado in pjugados %}
-                    <tr>
-                      <td><img src="{{pjugado[0]}}"></td>
-                      <td scope="colu">{{pjugado[1]}} - {{pjugado[3]}}</td>
-                      <td><img src="{{pjugado[2]}}"></td>
-                      <td>{{pjugado[4]}}</td>
-                    </tr>
-                    {% endfor %}
-                  </tr>
-                </tbody>
-                </table>
-              </div>
-            </div> 
-            <div class="columna-lateral">
-              <div class="fila-lateral">
-                <div><b>FAVORITO</b></div>
-                <img src='{{favorito[0]}}' alt='favorito' id='img_favorito' data-team='{{favorito[2]}}'>
-                <div><br><b>{{favorito[1]}}</b></div>
-              </div>
-              <div class="fila-lateral">
-                <table class="table table-hover tabla_liga">
-                  <thead>
-                    <tr>
-                      <th scope="col">ID</th>
-                      <th scope="col">Liga</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    {% for liga in ligas %}
-                    <tr>
-                      <th scope="row">{{liga[0]}}</th>
-                      <td><button class="btn_liga" data-liga="{{liga[0]}}">{{liga[1]}}</button></td>
-                    </tr>
-                    {% endfor %}
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-          
-          
-           
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </form>
         </main>
         
-    
-        <!-- Modal Datos Jugador-->
-        <div class="modal fade" id="empModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Datos del jugador</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-              
-              </div>
-              
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-              </div>
-            </div>
-          </div>
-        </div>
+  
 
   <script> 
     ses="{{ses}}";
