--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -209,7 +209,7 @@ main{
 .casilla {
     margin: auto;
     align-items: center;
-    padding-top: -20px;
+    padding-bottom: 20px;
     
     
     
@@ -286,6 +286,10 @@ main{
     text-align:center;
     align-content: center;
 }
+#tala_totales table thead tr th{
+    text-align:center;
+    align-content: center;
+}
 
 .boton-selec, .boton-info {
     border: none;
@@ -349,6 +353,23 @@ main{
     min-width: 40px;
     min-height: 60px;
     max-width: 60px;
+    max-height: 96px;
+    margin: auto;
+    justify-content: center;
+    align-items:center;
+    vertical-align: bottom;
+
+}
+.cuadro_contenedor_por {
+    border-radius: 10px;
+    border: solid;
+    border-color: transparent;
+    background-color:transparent;
+    height: 90%;
+    width: 90%;
+    min-width: 60px;
+    min-height: 60px;
+    max-width: 150px;
     max-height: 96px;
     margin: auto;
     justify-content: center;
@@ -454,14 +475,12 @@ main{
 .material-icons.md-48 { font-size: 48px; }
 
 #col2 {
-    margin-top: 15px;
-    padding-top: 10px;
     display: flex;
-    flex-flow: column wrap;
+    flex-flow:row wrap;
     justify-content: center;
     align-items: center;
-    max-width: 80px;
-    height: 480px;
+    max-width: 420px;
+    height: 100px;
     background-color:rgb(255, 255, 255, 0.2);
     
 }
@@ -471,13 +490,13 @@ main{
 .cuadro_int_bench_des {
     font-size:10px;
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     max-width: 60px;
     height: 100%; 
 }
 .cuadro_int_bench {
     max-width: 60px;
-    height: 20%;
+    height: 80%;
     overflow: hidden;   
 }
 #bench {
@@ -524,15 +543,48 @@ main{
     background-size:contain;
     
 }
+
+.page-wrapper-ideal {
+    background-color: transparent;
+}
+.page-wrapper-ideal {
+    background-image: url(../images/Football.png);
+    width: 75%;
+    position: relative;
+    font-size: 12px ;
+    color: black;
+    max-width: 430px;
+    max-height: 540px;
+    min-width: 430px;
+    min-height: 360px;
+    justify-content: center;
+    align-items: center;
+    background-size:contain;
+}
 .row_cancha {
 display: flex;
 -ms-flex-align: center;
 flex-direction: row;
 flex-wrap: nowrap;
 width: 100%;
-height: 20%;
+height: 25%;
+}
+#row_MED {
+    display: flex;
+    -ms-flex-align: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 95%;
+    height: 25%;
+    padding-left: 20px;
+    
 }
 
+.once_ideal{
+    color: white;
+    font-size: 28px;
+    font-weight: bolder;
+}
 .column {
 display: flex;
 flex-direction: column;
